force-app/src/objects/CTPISA__BookingCaptureLine__c.object
<CustomObject>
    <fields>
        <fullName>CTPISA__BalanceSheetGLAName__c</fullName>
        <label>BalanceSheetGLAName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Balance_Sheet_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Sheet GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Invoice Scan Lines (Balance Sheet GLA)</relationshipLabel>
        <relationshipName>Invoice_Scan_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__BookingCapture__c</fullName>
        <label>BookingCapture</label>
        <referenceTo>CTPISA__BookingCapture__c</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CTPISA__DateFrom__c</fullName>
        <description>To spread the costs over a period of time, starting from this date.</description>
        <inlineHelpText>To spread the costs over a period of time, starting from this date.</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTPISA__DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension1Name__c</fullName>
        <description>The read only name of Dimension 1 for non FF users.</description>
        <inlineHelpText>The read only name of Dimension 1 for non FF users.</inlineHelpText>
        <label>Dimension 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension2Name__c</fullName>
        <description>The read only name of Dimension 2 for non FF users.</description>
        <inlineHelpText>The read only name of Dimension 2 for non FF users.</inlineHelpText>
        <label>Dimension 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension3Name__c</fullName>
        <description>The read only name of Dimension 3 for non FF users.</description>
        <inlineHelpText>The read only name of Dimension 3 for non FF users.</inlineHelpText>
        <label>Dimension 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__ExpenseAccountName__c</fullName>
        <description>The name of the expense account, to show to non ff users.</description>
        <inlineHelpText>The name of the expense account, to show to non ff users.</inlineHelpText>
        <label>Expense Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__ExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Extended_PPV__c</fullName>
        <formula>CTPISA__Unit_PPV__c * CTPISA__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended PPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__Input_Tax_Value__c</fullName>
        <label>Input Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__Map_PO_Line_Quantity__c</fullName>
        <label>Map PO Line Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__Map_PO_Lines_Storage__c</fullName>
        <label>Map PO Lines Storage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__OutputTaxCodeName__c</fullName>
        <description>Output Tax Code name to show to non FF users.</description>
        <inlineHelpText>Output Tax Code name to show to non FF users.</inlineHelpText>
        <label>Output Tax Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__OutputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Invoice Scan Lines (Output Tax Code)</relationshipLabel>
        <relationshipName>InvoiceScanLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Output_Tax_Value__c</fullName>
        <label>Output Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__PPV_Weighted__c</fullName>
        <formula>CTPISA__PPV__c * CTPISA__NetValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPV Weighted %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__PPV__c</fullName>
        <label>PPV %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTPISA__Prepaid_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order_Line_Item__c</fullName>
        <description>Text field to store the corresponding purchase order line id for invoice scan  line of invoice scan</description>
        <label>Purchase Order Line Item</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__TaxCodeName__c</fullName>
        <description>The name of the input tax code for non ff users.</description>
        <inlineHelpText>The name of the input tax code for non ff users.</inlineHelpText>
        <label>Input Tax Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Invoice Scan Lines</relationshipLabel>
        <relationshipName>BookingCaptureLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Unit_PPV__c</fullName>
        <label>Unit PPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Scan Line</label>
    <nameField>
        <displayFormat>BCL-{000000000}</displayFormat>
        <label>BookingCaptureLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Scan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CTPISA__Net_Value_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>The (Unit Price X Quantity) should be equal to the Net Value of the of the Booking Capture Line.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTPISA__Unit_Price_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>The (Unit Price X Quantity) of the Booking Capture Lines should not be different than the net value of the Line.</errorMessage>
    </validationRules>
</CustomObject>